fastapi-host-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fastapi-host
  name: fastapi-host
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: fastapi-host
