main-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: guestbook.127-0-0-1.sslip.io
      http:
        paths:
          - backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: "*.d.127-0-0-1.sslip.io"
      http:
        paths:
          - backend:
              service:
                name: fastapi-host
                port:
                  number: 80
            path: /
            pathType: Prefix
